# UAV_tracking

./: CMakeLists.txt  PID.h  README.md  bbox_pub.cpp  package.xml  trajectory.h
fhog/: README.md
msg/: boundingbox.msg
src/: Kalman.h  detector.h  main.cpp  main_2.cpp
src/inc/: CMakeLists.txt  complexmat.hpp  fft.h  main.cpp  para.h  sample.h  timer.txt  tracker.cpp  tracker.h
src/inc/fhog/: CMakeLists.txt  SSE2NEON.h  SSE2NEON1.h  fhog.cpp  fhog.hpp  sse.hpp
src/inc/fhog/PaxHeader/: 鏃犳爣棰樻枃妗_
src/inc2/: featureExtractor.cpp  featureExtractor.h  fhog.hpp  gradientMex.cpp  gradientMex.h  motion.cpp  motion.h  observationModel.cpp  observationModel.h  parameters.h  sampler.cpp  sampler.h  threadpool.h  trackOnUav.cpp  trackOnUav.h  updater.cpp  updater.h  wrappers.hpp
